@@ -1,15 +1,20 @@
 package training.jimmy.FakeShop.service;
 
+import jakarta.servlet.http.HttpSession;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
+import training.jimmy.FakeShop.config.UserDetail;
 import training.jimmy.FakeShop.dto.UserDto;
 import training.jimmy.FakeShop.exceptions.EmailAlreadyExistsException;
 import training.jimmy.FakeShop.model.Role;
 import training.jimmy.FakeShop.model.User;
 import training.jimmy.FakeShop.repository.UserRepository;
 
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -33,8 +38,8 @@ public class UserService implements IUserService{
             throw new EmailAlreadyExistsException("Użytkownik o podanym adresie e-mail już istnieje.");
         }
         var user =  new User(userDto.getFirstName(), userDto.getLastName(),
-                userDto.getEmail(), passwordEncoder.encode(userDto.getPassword()),
-                Arrays.asList(new Role("ROLE_USER")));
+                userDto.getEmail(), passwordEncoder.encode(userDto.getPassword()), userDto.getUserName(),
+                List.of(new Role("ROLE_USER")));
         return userRepository.save(user);
     }
 
@@ -43,4 +48,20 @@ public class UserService implements IUserService{
         return Optional.ofNullable(userRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found")));
     }
+
+//    public void uploadAvatar(String username, MultipartFile file) {
+//        Optional<User> user = userRepository.findByUserName(username);
+//        if (user.isPresent() && !file.isEmpty()) {
+//            try {
+//                byte[] avatarBytes = file.getBytes();
+//                user.setAvatar(avatarBytes);
+//                userRepository.save(user);
+//            } catch (IOException e) {
+//                e.printStackTrace();
+//            }
+//        }
+//    }
+
+
+
 }
